[package]
name = "rust-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-alpha.2"
serde_cbor = "0.11.2"
serde_json = "1.0.73"
serde = { version = "1.0.132", features = ["derive"] }
 